...
            "state" : "translated",
            "value" : "Nouveau médicament"
          }
        }
      }
    },
    "addMedicine.saveButton" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Create"
...
            "value" : "Delete"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Supprimer"
          }
        }
      }
    },
    "medicine.delete.confirmMessage" : {
      "extractionState" : "manual",
...
            "state" : "translated",
            "value" : "Supprimer le compte ?"
          }
        }
      }
    },
    "user.deleteAccountButton" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete My Account"
...
